<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/user_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:contentDescription="@string/avatar"
        android:id="@+id/Avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/AboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/about_me" />

    <TextView
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_description" />

    <TextView
        android:id="@+id/LatestSwops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/latest_swops"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>