<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:scaleGravity="center_vertical|center_horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:textColor="#AAAAAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <Button
        android:id="@+id/next_button"
        android:textColor="#AAAAAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_next"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_above="@+id/next_button"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <ImageButton
            android:contentDescription="@string/like_btn"
            android:id="@+id/like_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="true"
            android:maxHeight="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/like" />

        <ImageButton
            android:contentDescription="@string/dislike_btn"
            android:id="@+id/dislike_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/dislike" />
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/title_activity_clothing"
        android:id="@+id/mainImgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="88dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/likes"
        android:textColor="#AAAAAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:text="@string/likes" />

</RelativeLayout>